# bitceptron-retriever

./: .gitignore  Cargo.toml  README.md
bitceptron-retriever-cli/: README.md  main.rs
bitceptron-retriever-cli/examples/: config.toml
examples/: example_01.rs  example_02.rs
src/: covered_descriptors.rs  error.rs  lib.rs  path_pairs.rs  retriever.rs  setting.rs  uspk_set.rs
src/client/: client_setting.rs  dump_utxout_set_result.rs  mod.rs
src/data/: defaults.rs  mod.rs  wallets_info.rs
src/explorer/: auxiliaries.rs  exploration_path.rs  exploration_step.rs  explorer_setting.rs  mod.rs
tests/: bitcoin.conf  integration_test.rs  integration_test_01.rs  overall_test_01.rs
