[package]
name = "bitceptron-retriever"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoin = "0.31.2"
bitcoincore-rpc = "0.18.0"
getset = "0.1.2"
miniscript = "11.0.0"
serde = { version = "1.0.200", features = ["derive"] }
strum = { version = "0.26.2", features = ["derive"] }
num-format = "0.4.4"
hashbrown = "0.14.5"
txoutset = "0.3.0"
indicatif = "0.17.8"
bip39 = { version = "2.0.0", features = ["zeroize"] }
hex = "0.4.3"
zeroize = { version = "1.7.0", features = ["zeroize_derive"] }
regex = "1.10.4"
config = "0.14.0"
